fixed overflow on x axis on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -972,6 +972,13 @@ and (device-width: 360px)
 and (device-height: 640px) 
 and (-webkit-device-pixel-ratio: 2){
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
 /*media query for contact page */
 
@@ -1146,7 +1153,7 @@ line-height: 28px;
     /*end*/
 
 
-    body {
+    body ,.off-switch {
 
         overflow-x:hidden !important;
     
@@ -1516,6 +1523,13 @@ width:42.5px;
   and (-webkit-device-pixel-ratio: 2) 
   and (orientation: landscape) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     /*media query for contact page */
 
@@ -1880,6 +1894,13 @@ margin-top:-120px;
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: portrait) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
 
 .contact-header{
@@ -2424,6 +2445,15 @@ width:42.5px;
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: landscape) {
 
+
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
+
     /*media query for contact page */
 
 .contact-header{
@@ -2790,7 +2820,14 @@ margin-top:-120px;
   and (-webkit-device-pixel-ratio: 4) 
   and (orientation: portrait) {
 
+   
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
     
+    
+    }
+     
 
 /*media query for contact page */
 
@@ -3338,6 +3375,14 @@ width:42.5px;
   and (orientation:portrait) {
 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
+
     /*media query for contact page */
 
 .contact-header{
@@ -3508,7 +3553,7 @@ line-height: 28px;
     /*end*/
 
 
-    body {
+    body ,.off-switch {
 
         overflow-x:hidden !important;
     
@@ -3880,6 +3925,14 @@ width:42.5px;
   and (device-height: 360px) 
   and (orientation:landscape) {
 
+
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     /*media query for contact page */
 
@@ -4254,6 +4307,13 @@ margin-top:-120px;
   and (device-width: 411px) 
   and (device-height: 731px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 /*media query for contact page */
 
 .contact-header{
@@ -4790,6 +4850,16 @@ width:42.5px;
 @media screen 
 and (device-width: 731px) 
 and (device-height: 411px) {
+
+
+
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 /*media query for contact page */
 
 .contact-header{
@@ -5162,6 +5232,13 @@ margin-top:-120px;
   and (device-width: 411px) 
   and (device-height: 823px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     /*media query for contact page */
 
@@ -5699,6 +5776,13 @@ width:42.5px;
 and (device-width: 823px) 
 and (device-height: 411px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
 
 .contact-header{
@@ -6073,6 +6157,13 @@ margin-top:-120px;
   and (device-width: 320px) 
   and (device-height: 568px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     /*media query for contact page */
 
@@ -6615,6 +6706,13 @@ margin-top: -8px;
   and (device-width: 568px) 
   and (device-height: 320px){
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
 
 .contact-header{
@@ -7064,6 +7162,13 @@ margin-top: 60px;
   and (device-width: 375px) 
   and (device-height: 667px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     /*media query for contact page */
 
@@ -7603,6 +7708,13 @@ width:42.5px;
   and (device-width: 667px) 
   and (device-height: 375px){
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
 
 .contact-header{
@@ -7972,6 +8084,13 @@ margin-top:-120px;
   and (device-width: 414px) 
   and (device-height: 736px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 /*media query for contact page */
 
 .contact-header{
@@ -8512,6 +8631,13 @@ width:42.5px;
   and (device-width: 736px) 
   and (device-height: 414px){
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
 
 .contact-header{
@@ -8882,6 +9008,13 @@ margin-top:-120px;
   and (device-width: 375px) 
   and (device-height: 812px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
 
 .contact-header{
@@ -9419,6 +9552,13 @@ width:42.5px;
   and (device-width: 812px) 
   and (device-height: 375px){
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
 /*media query for contact page */
 
@@ -9788,7 +9928,7 @@ margin-top:70px;
 
 
   /* specifies body properties*/
-  body {
+  body, .off-switch {
 
     overflow-x:hidden !important;
 
@@ -9834,6 +9974,13 @@ margin-top:70px;
   and (device-width: 768px) 
   and (device-height: 1024px){
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for careers*/
 
     .intro-text{
@@ -10235,6 +10382,13 @@ and (device-width: 1024px)
 and (device-height: 768px){
 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     .intro-text-new{
         font-family: 'Merriweather', serif !important;
@@ -10314,6 +10468,13 @@ margin-bottom: 60px;
   and (device-height: 1366px){
 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
 /*values for about us page*/
 
@@ -10424,6 +10585,13 @@ and (max-height:1440px)
  and (-webkit-max-device-pixel-ratio:2)
  { 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
        /*media query for contact page */
 
 .contact-header{
@@ -10969,6 +11137,13 @@ and (device-height: 896px)
 and (-webkit-device-pixel-ratio: 3)
 and (orientation : portrait) { 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
    /*media query for contact page */
 
    .contact-header{
@@ -11514,6 +11689,13 @@ and (device-height:414px)
 and (-webkit-device-pixel-ratio: 3)
 and (orientation :landscape) { 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
 
 /*media query for contact page */
@@ -11892,6 +12074,13 @@ margin-top:70px;
  and (-webkit-device-pixel-ratio: 3)
  and (orientation : portrait) { 
  
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
     /*media query for contact page */
  
     .contact-header{
@@ -12438,6 +12627,13 @@ and (-webkit-device-pixel-ratio: 3)
 and (orientation :landscape) { 
 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
 /*media query for contact page */
 
@@ -12819,6 +13015,13 @@ and (device-height: 896px)
 and (-webkit-device-pixel-ratio: 3)
 and (orientation : portrait) { 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
    /*media query for contact page */
 
    .contact-header{
@@ -13358,6 +13561,13 @@ width:42.5px;
 
  @media only screen and (min-width: 320px) and (max-width: 480px) {
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 
     /*media query for contact page */
  
@@ -13896,6 +14106,13 @@ width:42.5px;
  @media only screen and (min-width: 568px) and (max-width: 812px) and (orientation:landscape) {
 
 
+    body ,.off-switch {
+
+        overflow-x:hidden !important;
+    
+    
+    }
+    
 /*media query for contact page */
 
 .contact-header{
